Atualizado: HTML com botão flutuante e melhorias visuais

--- a/index.html
+++ b/index.html
@@ -77,5 +77,13 @@
   <footer>
     <p>&copy; 2025 NovaEra. Todos os direitos reservados.</p>
   </footer>
+  <!-- Botão flutuante do WhatsApp -->
+<a href="https://wa.me/5511912345678?text=Olá!%20Tenho%20interesse%20nos%20produtos%20da%20Loja%20NovaEra."
+   class="whatsapp-btn"
+   target="_blank"
+   title="Fale conosco no WhatsApp">
+  💬
+</a>
+
 </body>
 </html>
